# aoc2018

./: README.md  aoc2018.cabal
app/: Main.hs
src/: AOC2018.hs  Day2.hs  Day3.hs  Day4.hs
test/: Day3Spec.hs  Day4Spec.hs  LelSpec.hs
