name:                aoc2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc2018#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Day2
                     , Day3
                     , Day4
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , text
                     , bytestring
                     , primitive
                     , megaparsec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , RankNTypes

executable aoc2018
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , aoc2018
  default-language:    Haskell2010

test-suite aoc2018-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Day3Spec
                     , Day4Spec
  build-depends:       base
                     , aoc2018
                     , hspec
                     , QuickCheck
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
